# slimreaper35

./: README.md  quotes.json  upratovanie.py
.github/workflows/: ci.yml  stats.yaml
apache-logs-parser/: Dockerfile  Makefile  docker-compose.yml  requirements.txt
apache-logs-parser/data/: apache-logs.txt
apache-logs-parser/src/: celery_app.py  celery_worker.py  db.py  main.py  tasks.py
hack/: cleaning.py  decorators.py  tree.py  upratovanie.py
hack/interview/: common.py  google.py
private/: cleaning.py
private/ematiq/: pyproject.toml  task.md
private/ematiq/src/: external.py  service.py
private/interview/: common.py  random.py
private/utils/: decorators.py  logs.py  tree.py  yielding.py
resume/: Resume.html  merger.py  msoltis-resume.html
